--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri May 20 19:52:28 CST 2016
-sdk.dir=C\:\\Users\\Jeudrin\\AppData\\Local\\Android\\Sdk
+#Mon May 23 07:11:53 CST 2016
+sdk.dir=/home/marcos/Android/Sdk
