--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
-            android:name=".SmartTEC"
+            android:name=".SplashScreen"
+            android:noHistory="true"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,10 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SmartTEC" />
         <activity android:name=".MenuDia" />
         <activity android:name=".Biblioteca" />
         <activity android:name=".CubiculosDisponibles" />
-        <activity android:name=".Registrarse"></activity>
+        <activity android:name=".Registrarse" />
     </application>
 
 </manifest>
