--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jun 03 08:11:50 CST 2016
-sdk.dir=/home/marcos/Android/Sdk
+#Tue Jun 14 18:44:32 CST 2016
+sdk.dir=C\:\\Users\\Jeudrin\\AppData\\Local\\Android\\Sdk
