--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jun 16 14:05:57 GMT-06:00 2016
-sdk.dir=D\:\\Usuarios\\Usuario\\AppData\\Local\\Android\\Sdk
+#Tue Jun 21 16:48:09 CST 2016
+sdk.dir=/home/marcos/Android/Sdk
